src/snapshots/afrotd__parser__tests__rule_html_2.29.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.29.1 Game Clock
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Die Game Clock ist jede Zeitnahme-Vorrichtung, die von dem
                zuständigen Schiedsrichter benutzt wird, um die Spielzeit zu
                messen.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.29.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
