src/snapshots/afrotd__parser__tests__rule_html_2.3.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.3.1 Blocken
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Blocken ist das Behindern eines Gegners durch absichtliches
                Berühren mit einem Teil des Körpers des Blockers.
                </li>
                <li>Wegdrücken (Pushing) eines Gegners ist das Blocken mit
                offenen Händen.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.3.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
