src/snapshots/afrotd__parser__tests__rule_html_2.3.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.3.2 Unterhalb der Gürtellinie
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Ein Block unterhalb der Gürtellinie ist ein Block, bei dem
                der anfängliche Kontakt mit einem Körperteil des Blockers
                unterhalb der Gürtellinie eines Gegners erfolgt, der mit einem
                oder beiden Füßen auf dem Boden steht. Im Zweifel ist der
                Kontakt unter der Gürtellinie (Regel 9.1.6).
                </li>
                <li>Ein Blocker, der seinen Gegner zuerst über der Gürtellinie
                berührt und anschließend unter die Gürtellinie rutscht, hat
                nicht unter der Gürtellinie geblockt. Berührt der Blocker
                zuerst die Hände des Gegners an oder oberhalb der Gürtellinie,
                so blockt er regelgerecht über der Gürtellinie (Regel 9.1.6).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.3.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
