src/snapshots/afrotd__parser__tests__rule_html_2.3.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.3.5 Körperrahmen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Der Körperrahmen eines Spielers befindet sich, mit Ausnahme des
                Rückens, an den Schultern und darunter (Regel 9.3.3.a.1.b
                Ausnahme).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.3.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
