src/snapshots/afrotd__parser__tests__rule_html_2.3.6.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.3.6 Blockzone
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Die Blockzone ist eine rechteckige Zone, die sich vom
                mittleren Lineman der Offense Formation fünf Meter seitlich und
                drei Meter längs in jede Richtung erstreckt (siehe Anhang A).
                </li>
                <li>Die Blockzone ist aufgehoben, sobald der Ball die Zone
                erstmals verlassen hat.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.3.6"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
