src/snapshots/afrotd__parser__tests__rule_html_2.3.7.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.3.7 Blind Side Block
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Blind Side Block ist ein Block im „offenen Feld“ gegen
                einen Gegner, wobei der Blocker von außerhalb des Sichtfeldes
                des Gegners gegen den Geblockten vorgeht oder der Block so
                ausgeführt wird, dass der Gegner sich nicht vernünftig selbst
                gegen den Block verteidigen kann.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.3.7"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
